--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -15,18 +15,26 @@ jobs:
 #      - run: sleep 10
 #      - run: curl localhost:8101/_status/check -I
 
-  docker_build:
-     runs-on: ubuntu-latest
-     steps:
-       - uses: actions/checkout@v2
-       - run: sudo apt install wait-for-it
-       - name: Build Docker image
-         run: DOCKER_BUILDKIT=1 docker build --tag testrun .
-       - name: Run server with Docker
-         run: docker run -p ${PORT}:80 testrun &
-       - run: wait-for-it localhost:${PORT}
-       - name: Check server status
-         run: curl localhost:${PORT}/_status/check -I
+  test:
+    runs-on: ubuntu-latest
+    steps: 
+     - uses: actions/checkout@v2
+     - run: echo "Hello"
+       id: hello
+     - run: echo "${{ steps.hello.outputs }}"
+
+#   docker_build:
+#      runs-on: ubuntu-latest
+#      steps:
+#        - uses: actions/checkout@v2
+#        - run: sudo apt install wait-for-it
+#        - name: Build Docker image
+#          run: DOCKER_BUILDKIT=1 docker build --tag testrun .
+#        - name: Run server with Docker
+#          run: docker run -p ${PORT}:80 testrun &
+#        - run: wait-for-it localhost:${PORT}
+#        - name: Check server status
+#          run: curl localhost:${PORT}/_status/check -I
 
 #   docker_run:
 #      runs-on: ubuntu-latest
