--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -18,7 +18,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps: 
-     #- uses: actions/checkout@v2
+     - uses: actions/checkout@v2
      - run: echo "::set-output name=version::$( node -p "require('./package.json').version" )"
        id: package_json
      - run: echo "::set-output name=version::$( npm show vanilla-framework version )"
