--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -35,6 +35,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: dfreeman/release-drafter@24057173
+        with:
+          publish: true
         id: create_release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
