--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,5 +1,5 @@
-name-template: 'v$NEXT_PATCH_VERSION'
-tag-template: 'v$NEXT_PATCH_VERSION'
+name-template: 'v$RESOLVED_VERSION'
+tag-template: 'v$RESOLVED_VERSION'
 categories:
   - title: '🚀 Features'
     label: 'Feature 🎁'
@@ -18,6 +18,6 @@ template: |
   Install with NPM: https://www.npmjs.com/package/vanilla-framework
   Visit the documentation at https://docs.vanillaframework.io
 
-  ## New in Vanilla v$NEXT_PATCH_VERSION
+  ## New in Vanilla v$RESOLVED_VERSION
 
   $CHANGES
