--- a/.github/workflows/publish-on-release.yml
+++ b/.github/workflows/publish-on-release.yml
@@ -8,7 +8,7 @@ jobs:
   hello:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Hello ${{ github.event_name }}"
+      - run: echo "Hello ${{ github.event_name }} ${{ github.event.action }}"
 #   build:
 #     name: Build Vanilla
 #     runs-on: ubuntu-latest
