--- a/.github/workflows/pr_docker_build.yml
+++ b/.github/workflows/pr_docker_build.yml
@@ -18,3 +18,17 @@ jobs:
         run: docker run -p ${PORT}:80 testrun &
       - name: Check server status
         run: curl localhost:${PORT}/_status/check -I
+
+  linkchecker:
+    name: Run site and check links
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install linkchecker
+        run: sudo apt update && sudo apt install linkchecker
+      - name: Build Docker image
+        run: DOCKER_BUILDKIT=1 docker build --build-arg BUILD_ID=test --tag testrun .
+      - name: Run server with Docker
+        run: docker run -p ${PORT}:80 testrun &
+      - name: Check internal links
+        run: linkchecker --threads 2 --ignore-url /search http://localhost:${PORT}
