--- a/.github/workflows/percy.yml
+++ b/.github/workflows/percy.yml
@@ -1,23 +1,23 @@
 name: Percy
 on:
   push:
-    branches:
-      - master
+    branches: [master]
   pull_request:
     types: [opened, synchronize, reopened]
 
 jobs:
-  build:
+  percy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@master
-      - run: yarn install
+      - name: Install dependencies
+        run: yarn install
       - name: Build Docker image
         run: DOCKER_BUILDKIT=1 docker build --build-arg BUILD_ID=test --tag testrun .
       - name: Run server with Docker
         run: docker run -p ${PORT}:80 testrun &
-      - name: Percy Test
+      - name: Snapshot screenshots for Percy
         uses: percy/exec-action@v0.1.1
         with:
           command: 'node snapshots.js'
