--- a/.github/workflows/percy.yml
+++ b/.github/workflows/percy.yml
@@ -5,6 +5,9 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
 
+env:
+  PORT: 8765
+
 jobs:
   percy:
     runs-on: ubuntu-latest
