Trigger on pull_request

--- a/.github/workflows/percy.yml
+++ b/.github/workflows/percy.yml
@@ -1,9 +1,6 @@
 name: Percy
-on:
-  push:
-    branches: [master]
-  pull_request:
-    types: [opened, synchronize, reopened]
+on: 
+  pull_request
 
 env:
   PORT: 8765
