--- a/.github/workflows/percy.yml
+++ b/.github/workflows/percy.yml
@@ -1,6 +1,8 @@
 name: Percy
-on: 
-  pull_request
+on:
+  push:
+    branches: [master]
+  pull_request:
 
 env:
   PORT: 8765
@@ -9,20 +11,17 @@ jobs:
   percy:
     runs-on: ubuntu-latest
     steps:
-      - run: echo ${{ github.event	}}
-      - run: echo ${{ github.event_name }}
-      - run: echo ${{ github.event.action }}
-#       - name: Checkout
-#         uses: actions/checkout@master
-#       - name: Install dependencies
-#         run: yarn install
-#       - name: Build Docker image
-#         run: DOCKER_BUILDKIT=1 docker build --build-arg BUILD_ID=test --tag testrun .
-#       - name: Run server with Docker
-#         run: docker run -p ${PORT}:80 testrun &
-#       - name: Snapshot screenshots for Percy
-#         uses: percy/exec-action@v0.1.1
-#         with:
-#           command: 'node snapshots.js'
-#         env:
-#           PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
+      - name: Checkout
+        uses: actions/checkout@master
+      - name: Install dependencies
+        run: yarn install
+      - name: Build Docker image
+        run: DOCKER_BUILDKIT=1 docker build --build-arg BUILD_ID=test --tag testrun .
+      - name: Run server with Docker
+        run: docker run -p ${PORT}:80 testrun &
+      - name: Snapshot screenshots for Percy
+        uses: percy/exec-action@v0.3.0
+        with:
+          command: 'node snapshots.js'
+        env:
+          PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
