Update docs link in release drafter template

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -16,7 +16,7 @@ template: |
   ## Getting Vanilla Framework
 
   Install with NPM: https://www.npmjs.com/package/vanilla-framework
-  Visit the documentation at https://docs.vanillaframework.io
+  Visit the documentation at https://vanillaframework.io/docs
 
   ## New in Vanilla v$NEXT_PATCH_VERSION
 
