--- a/package.json
+++ b/package.json
@@ -42,10 +42,6 @@
     "/scss",
     "!/scss/docs"
   ],
-  "devDependenciesComments": {
-    "vanilla-framework": "vanilla-framework is included in devDependencies for use in styling the docs site",
-    "pretty-quick": "keep pretty-quick on v1, pretty-quick@2 requires version of node that we can't install on jenkins"
-  },
   "devDependencies": {
     "@percy/script": "1.0.3",
     "autoprefixer": "9.7.4",
@@ -61,7 +57,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged"
+      "pre-commit": "pretty-quick --check --staged"
     }
   }
 }
