--- a/renovate.json
+++ b/renovate.json
@@ -1,17 +1,13 @@
 {
-  "extends": ["config:base", "schedule:monthly", "group:all"],
+  "extends": ["config:base"],
+  "labels": ["Maintenance 🔨"],
   "packageRules": [
     {
-      "depTypeList": ["devDependencies"],
-      "extends": [":automergeMinor"]
-    },
-    {
-      "packageNames": ["vanilla-framework"],
+      "packagePatterns": ["*"],
+      "extends": ["schedule:weekly"],
       "minor": {
-        "automerge": false
-      },
-      "patch": {
-        "automerge": false
+        "groupName": "all non-major dependencies",
+        "groupSlug": "all-minor-patch"
       }
     }
   ]
