--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 canonicalwebteam.flask-base==0.4.3
 gunicorn[gevent]
-gevent=1.4.0
+gevent==1.4.0
 canonicalwebteam.templatefinder==0.2.4
 canonicalwebteam.search==0.2.1
