Add secret_key circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,8 @@ version: 2
 defaults: &defaults
   docker:
     - image: canonicalwebteam/dev:v1.6.7
+      environment:
+        SECRET_KEY: local_development_fake_key
 
 jobs:
   percy:
