Add prettier checks to automatic tests

--- a/.sass-lint.yml
+++ b/.sass-lint.yml
@@ -2,12 +2,12 @@
 # Example config: https://github.com/sasstools/sass-lint/blob/master/docs/sass-lint.yml
 
 files:
-  include: "scss/**/*.s+(a|c)ss"
+  include: 'scss/**/*.s+(a|c)ss'
   ignore:
-    - "scss/_base_reset.scss"
-    - "scss/grid/**/*"
-    - "scss/_layout_grid.scss"
-    - "scss/deprecate/**/*"
+    - 'scss/_base_reset.scss'
+    - 'scss/grid/**/*'
+    - 'scss/_layout_grid.scss'
+    - 'scss/deprecate/**/*'
 rules:
   # Documentation: https://github.com/sasstools/sass-lint/tree/master/docs/rules
 
