--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "start": "yarn build && yarn serve",
     "build": "node-sass scss --functions sass-functions.js --output-style compressed --output build/css && postcss --use autoprefixer --replace 'build/css/**/*.css' --no-map",
     "serve": "./entrypoint 0.0.0.0:${PORT}",
-    "test": "yarn run lint-scss && mdspell docs/**/*.md -r -n -a --en-gb && node -e 'require(\"./tests/parker\").parkerTest()'",
+    "test-scss": "node -e 'require(\"./tests/parker\").parkerTest()'",
+    "test-spelling": "mdspell docs/**/*.md -r -n -a --en-gb",
+    "test": "yarn lint-scss && yarn lint-prettier &&  yarn test-spelling && yarn test-scss",
+    "lint-prettier": "prettier -c .",
     "lint-scss": "sass-lint 'scss/**/*.scss' --verbose --no-exit --max-warnings=0",
     "watch:scss": "node-sass scss --functions sass-functions.js --output-style compressed --output build/css --watch",
     "watch:scss:skip-standalone": "node-sass  scss/docs --functions sass-functions.js --output-style compressed --output build/css/docs --watch",
