--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,15 +2,9 @@
   "extends": ["stylelint-config-standard", "stylelint-prettier/recommended"],
   "plugins": ["stylelint-order", "stylelint-scss"],
   "rules": {
-    "order/properties-alphabetical-order": [true, {"severity": "warning"}],
+    "order/properties-alphabetical-order": true,
     "at-rule-no-unknown": null,
     "scss/at-rule-no-unknown": true,
-
-    "declaration-empty-line-before": ["always", {"severity": "warning"}],
-    "comment-empty-line-before": ["always", {"severity": "warning"}],
-    "no-descending-specificity": [true, {"severity": "warning"}],
-    "no-duplicate-selectors": [true, {"severity": "warning"}],
-    "no-empty-source": [true, {"severity": "warning"}],
-    "property-no-unknown": [true, {"severity": "warning"}]
+    "no-descending-specificity": [true, {"severity": "warning "}]
   }
 }
