--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -5,6 +5,8 @@
     "order/properties-alphabetical-order": true,
     "at-rule-no-unknown": null,
     "scss/at-rule-no-unknown": true,
-    "no-descending-specificity": [true, {"severity": "warning "}]
+    "no-descending-specificity": [true, {"severity": "warning "}],
+
+    "scss/at-extend-no-missing-placeholder": true
   }
 }
