--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -7,6 +7,11 @@
     "scss/at-rule-no-unknown": true,
     "no-descending-specificity": [true, {"severity": "warning "}],
 
-    "scss/at-extend-no-missing-placeholder": true
+    "scss/at-extend-no-missing-placeholder": true,
+    "property-no-vendor-prefix": true,
+    "value-no-vendor-prefix": true,
+    "selector-no-vendor-prefix": true,
+    "media-feature-name-no-vendor-prefix": true,
+    "at-rule-no-vendor-prefix": true
   }
 }
