Disallow selectors with qualifying element types

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -12,6 +12,7 @@
     "value-no-vendor-prefix": true,
     "selector-no-vendor-prefix": true,
     "media-feature-name-no-vendor-prefix": true,
-    "at-rule-no-vendor-prefix": true
+    "at-rule-no-vendor-prefix": true,
+    "selector-no-qualifying-type": true
   }
 }
