--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -13,6 +13,11 @@
     "selector-no-vendor-prefix": true,
     "media-feature-name-no-vendor-prefix": true,
     "at-rule-no-vendor-prefix": true,
-    "selector-no-qualifying-type": true
+    "selector-no-qualifying-type": true,
+    "selector-max-id": 0,
+    "max-nesting-depth": 3,
+    "function-url-scheme-whitelist": ["data"],
+    "scss/at-import-no-partial-leading-underscore": true,
+    "scss/at-import-partial-extension": "never"
   }
 }
