Add redirect for legacy /docs/en/ URLs

--- a/redirects.yaml
+++ b/redirects.yaml
@@ -1,5 +1,6 @@
 /en/?: /
 /en/(?P<path>.*): /{path}
+/docs/en/(?P<path>.*): /docs/{path}
 /(?P<path>.+)\.html: /{path}
 /build/(?P<path>.*): /static/build/{path}
 /css/(?P<path>.*): /static/css/{path}
