redirects and links fix

--- a/redirects.yaml
+++ b/redirects.yaml
@@ -5,3 +5,4 @@
 /build/(?P<path>.*): /static/build/{path}
 /css/(?P<path>.*): /static/css/{path}
 /js/(?P<path>.*): /static/js/{path}
+/docs/patterns/article-pagination: /docs/patterns/pagination
