--- a/konf/site.yaml
+++ b/konf/site.yaml
@@ -10,6 +10,9 @@ env:
       key: google-custom-search-key
       name: google-api
 
+  - name: SENTRY_DSN
+    value: https://0ff6fb54f0a14360ac6b0157f130b807@sentry.is.canonical.com//36
+
 extraHosts:
   - domain: docs.vanillaframework.io
 
